--- a/bikes.html
+++ b/bikes.html
@@ -71,7 +71,7 @@
 									<header>
 										<h2><a href="https://doi.org/10.1111/rssa.12834">The Helsinki Bike-Sharing System - Insights gained from a spatiotemporal functional model</a></h2>
 										<p>
-                                        Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing System - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A, accepted <a href="https://doi.org/10.1111/rssa.12834">(DOI)</a>
+                                        Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing System - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A<a href="https://doi.org/10.1111/rssa.12834"> (DOI)</a>
 										</p>
 									</header>
                                     <h3>Abstract</h3>
