--- a/research.html
+++ b/research.html
@@ -78,7 +78,7 @@
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
                                         <ul>
-                                            <li> Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing Systems - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A, accepted<a href="https://arxiv.org/abs/2012.10746">(arXiv)</a></li>
+                                            <li> Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing Systems - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A<a href="https://doi.org/10.1111/rssa.12834"> (DOI)</a></li>
                                             <li> Merk, M., <strong>Otto, P.</strong> (2022): Estimation of the spatial weighting matrix for regular lattice data -- An adaptive lasso approach with cross-sectional resampling. Environmetrics 33(1) <a href="https://doi.org/10.1002/env.2705">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Piter, A., Gijsman, R. (2021): Statistical Analysis of Beach Profile Evolution and External Influences: Applying a Spatiotemporal Functional Approach. Coastal Engineering 170 <a href="https://doi.org/10.1016/j.coastaleng.2021.103999">(DOI)</a></li>
                                             <li> Fassò, A., Maranzano, P., <strong>Otto, P.</strong> (2021): Spatiotemporal variable selection and air quality impact assessment of COVID-19 lockdown. Spatial Statistics (online first) <a href="https://doi.org/10.1016/j.spasta.2021.100549">(DOI)</a></li>
