--- a/research.html
+++ b/research.html
@@ -78,6 +78,7 @@
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
                                         <ul>
+                                            <li> Harke, F. H., Merk, M., <strong>Otto, P.</strong> (2022): Estimation of Asymmetric Spatial Autoregressive Dependence on Irregular Lattices. Symmetry 14(7)<a href="https://doi.org/10.3390/sym14071474"> (DOI)</a></li>
                                             <li> Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing Systems - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A<a href="https://doi.org/10.1111/rssa.12834"> (DOI)</a></li>
                                             <li> Merk, M., <strong>Otto, P.</strong> (2022): Estimation of the spatial weighting matrix for regular lattice data -- An adaptive lasso approach with cross-sectional resampling. Environmetrics 33(1) <a href="https://doi.org/10.1002/env.2705">(DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Piter, A., Gijsman, R. (2021): Statistical Analysis of Beach Profile Evolution and External Influences: Applying a Spatiotemporal Functional Approach. Coastal Engineering 170 <a href="https://doi.org/10.1016/j.coastaleng.2021.103999">(DOI)</a></li>
