--- a/lasso.html
+++ b/lasso.html
@@ -71,14 +71,14 @@
 									<header>
 										<h2><a href="https://arxiv.org/abs/1810.06940">Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks</a></h2>
 										<p>
-                                        <strong>Otto, P.</strong>, Steinert, R. (2019): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks <a href="https://arxiv.org/abs/1810.06940">(arXiv)</a>
+                                        <strong>Otto, P.</strong>, Steinert, R. (2019): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks, Journal of Computational and Graphical Statistics <a href="https://arxiv.org/abs/1810.06940">(arXiv)</a>
 										</p>
 									</header>
                                     <h3>Abstract</h3>
                                     <p>
                                     In this paper, we propose a two-stage LASSO estimation approach for the estimation of a full spatial weights matrix of spatiotemporal autoregressive models. In addition, we allow for an unknown number of structural breaks in the local means of each spatial location. These locally varying mean levels, however, can easily be mistaken as spatial dependence and vice versa. Thus, the proposed approach jointly estimates the spatial dependence, all structural breaks, and the local mean levels. For selection of the penalty parameter, we propose a completely new selection criterion based on the distance between the empirical spatial autocorrelation and the spatial dependence estimated in the model. Through simulation studies, we will show the finite-sample performance of the estimators and provide practical guidance as to when the approach could be applied. Finally, the invented method will be illustrated by an empirical example of regional monthly real-estate prices in Berlin between 1995 and 2014. The spatial units will be defined by the respective ZIP codes. The new approach allows us to estimate local mean levels and quantify the deviation of the observed prices from these levels due to spatial spillover effects.
                                     </p>
-<!--                                    <a href="https://www.scimagojr.com/journalsearch.php?q=23863&amp;tip=sid&amp;exact=no" title="SCImago Journal &amp; Country Rank"><img border="0" src="https://www.scimagojr.com/journal_img.php?id=23863" alt="SCImago Journal &amp; Country Rank"  /></a>-->
+                                    <a href="https://www.scimagojr.com/journalsearch.php?q=23863&amp;tip=sid&amp;exact=no" title="SCImago Journal &amp; Country Rank"><img border="0" src="https://www.scimagojr.com/journal_img.php?id=23863" alt="SCImago Journal &amp; Country Rank"  /></a>
 								</article>
 							</div>
                             
