--- a/research.html
+++ b/research.html
@@ -78,6 +78,7 @@
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>Otto, P.</strong>, Steinert, R. (2022): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics <a href="https://arxiv.org/abs/1810.06940">(accepted)</a></li>
                                             <li> Harke, F. H., Merk, M., <strong>Otto, P.</strong> (2022): Estimation of Asymmetric Spatial Autoregressive Dependence on Irregular Lattices. Symmetry 14(7)<a href="https://doi.org/10.3390/sym14071474"> (DOI)</a></li>
                                             <li> Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing Systems - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A<a href="https://doi.org/10.1111/rssa.12834"> (DOI)</a></li>
                                             <li> Merk, M., <strong>Otto, P.</strong> (2022): Estimation of the spatial weighting matrix for regular lattice data -- An adaptive lasso approach with cross-sectional resampling. Environmetrics 33(1) <a href="https://doi.org/10.1002/env.2705">(DOI)</a></li>
