--- a/cv.html
+++ b/cv.html
@@ -72,7 +72,7 @@
                             <div class="row">
                                 <article class="col-8 col-12-mobile special">
                                     <p>
-                                    Passionate statistician and professor of big geospatial data with an interdisciplinary research profile and several publications in outstanding scientific journals (rated as top 10% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 4 Ph.D. dissertations (3 ongoing, 1 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 500,000 Euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
+                                    Passionate statistician and professor of big geospatial data with an interdisciplinary research profile and several publications in outstanding scientific journals (rated as top 9% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (6 ongoing, 1 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 800,000 Euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
                                 </article>
                                 <article class="col-3 col-12-mobile special">
@@ -84,6 +84,7 @@
                                 <dl>
                                   <dt><b>Since 01/09/2018:</b></dt>
                                   <dd>Assistant professor of Big Geospatial Data, Institute for Cartography and Geoinformatics of the Faculty of Civil Engineering and Geodesy, Leibniz University Hannover</dd>
+                                  <dd>My group currently consists of 6 PhD students: Anna Malinovskaya, Franz H. Harke, Qendrim Shaboviq, Mohammadreza Nasiriboroujeni, Ariane Nidelle Meli Chrisko, Elkanah Nyabuto</dd>
                                   <dt><b>01/04/2020 - 31/03/2021:</b></dt>
                                   <dd>Visiting/substitute professor of Spatial Data Analysis and Statistical Learning (full professor), Faculty of Economics, University of Göttingen</dd>
                                   <dt><b>01/01/2017 - 31/08/2018:</b></dt>
