--- a/research.html
+++ b/research.html
@@ -11,6 +11,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+        <script type="text/javascript">
+        <!--
+        var arxiv_authorid = "otto_p_1";
+        var arxiv_format = "arxiv";
+        var arxiv_max_entries = 4;
+        //--></script>
+        <style type="text/css">
+        div.arxivfeed {margin-bottom: 5px;}
+        </style>
+        <script type="text/javascript" src="https://arxiv.org/js/myarticles.js">
+        </script>
 	</head>
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
@@ -78,7 +89,8 @@
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
                                         <ul>
-                                            <li> <strong>Otto, P.</strong>, Steinert, R. (2022): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics <a href="https://arxiv.org/abs/1810.06940">(accepted)</a></li>
+                                            <li> <strong>Otto, P.</strong>, Schmid, W. (2022): A general framework for spatial GARCH models. Statistical Papers<a href="https://arxiv.org/abs/2106.10477"> (accepted)</a></li>
+                                            <li> <strong>Otto, P.</strong>, Steinert, R. (2022): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics<a href="https://doi.org/10.1080/10618600.2022.2107530"> (DOI)</a></li>
                                             <li> Harke, F. H., Merk, M., <strong>Otto, P.</strong> (2022): Estimation of Asymmetric Spatial Autoregressive Dependence on Irregular Lattices. Symmetry 14(7)<a href="https://doi.org/10.3390/sym14071474"> (DOI)</a></li>
                                             <li> Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing Systems - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A<a href="https://doi.org/10.1111/rssa.12834"> (DOI)</a></li>
                                             <li> Merk, M., <strong>Otto, P.</strong> (2022): Estimation of the spatial weighting matrix for regular lattice data -- An adaptive lasso approach with cross-sectional resampling. Environmetrics 33(1) <a href="https://doi.org/10.1002/env.2705">(DOI)</a></li>
@@ -128,6 +140,11 @@
                                             <li> <strong>Otto, P.</strong>, Lange, A.-L. (2017): Arbeitsbuch der Angewandten Statistik - Mit Aufgaben zur Software R und detaillierten Lösungen. Springer & Gabler, Heidelberg <a href="http://www.springer.com/de/book/9783662492116">(Springer Link)</a></li>
                                            
                                         </ul>
+                                    </p>
+                                    <h3>My arXiv articles</h3>
+                                    <p>Below are my 4 most recent publications on arXiv, a full list can be found here: <a href="https://arxiv.org/a/otto_p_1.html">https://arxiv.org/a/0000-0002-9796-6682.html</a></p>
+                                    <p>
+                                        <div id="arxivfeed"></div>
                                     </p>
 								</article>
 							</div>
