--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<article>
 							<a href="spARCH.html" class="image featured"><img src="images/pic01_n.jpg" alt="" /></a>
 							<header>
-								<h3><a href="spARCH.html">Spatial ARCH Model</a></h3>
+								<h3><a href="spARCH.html">Spatial ARCH Model (SpaSta)</a></h3>
 							</header>
 							<p>Inspired by the time-series ARCH model developed by Robert F. Engle (1982), for which he was awarded the Nobel Prize, we have introduced a univariate spatial ARCH model in 2016 (first published arXiv paper).</p>
 						</article>
@@ -91,23 +91,16 @@
                         <article>
                             <a href="RJ.html" class="image featured"><img src="images/pic02_n.jpg" alt="" /></a>
                             <header>
-                                <h3><a href="RJ.html">spGARCH: An R-Package for spatial GARCH Models</a></h3>
+                                <h3><a href="RJ.html">spGARCH: An R-Package for spatial GARCH Models (RJ)</a></h3>
                             </header>
                             <p>Description of my R-package for simulation and estimation of spatial GARCH models, including a new logarithmic spatial ARCH process.</p>
                         </article>
 <!--                        total number of downloads <img src="https://cranlogs.r-pkg.org/badges/grand-total/spGARCH" alt="" />-->
-						<article>
-							<a href="profiles.html" class="image featured"><img src="images/pic03_n.jpg" alt="" /></a>
-							<header>
-								<h3><a href="profiles.html">Statistical Analysis of Coastal Profiles</a></h3>
-							</header>
-							<p>Fully data-driven statistical model to understand the spatial and temporal evolution of coastal profiles (e.g. for efficient intervention designs against coastal erosion).</p>
-						</article>
-                        
+
                         <article>
                             <a href="bikes.html" class="image featured"><img src="images/pic05_n.jpg" alt="" /></a>
                             <header>
-                                <h3><a href="bikes.html">The Helsinki Bike-Sharing System</a></h3>
+                                <h3><a href="bikes.html">The Helsinki Bike-Sharing System (JRSSA)</a></h3>
                             </header>
                             <p>Functional geostatistical analysis of bike-sharing usage in the capital of Finland, Helsinki.</p>
                         </article>
@@ -115,10 +108,18 @@
 						<article>
 							<a href="lasso.html" class="image featured"><img src="images/pic04_n.jpg" alt="" /></a>
 							<header>
-								<h3><a href="lasso.html">Estimation of the Spatial Weights Matrix</a></h3>
+								<h3><a href="lasso.html">Estimation of the Spatial Weights Matrix (JCGS)</a></h3>
 							</header>
 							<p>We propose an adaptive LASSO estimation procedure to fully recover the unknown weight matrix of spatial autoregressive panels with locally varying mean levels.</p>
 						</article>
+                        
+                        <article>
+                            <a href="profiles.html" class="image featured"><img src="images/pic03_n.jpg" alt="" /></a>
+                            <header>
+                                <h3><a href="profiles.html">Statistical Analysis of Coastal Profiles (CoastEng)</a></h3>
+                            </header>
+                            <p>Fully data-driven statistical model to understand the spatial and temporal evolution of coastal profiles (e.g. for efficient intervention designs against coastal erosion).</p>
+                        </article>
 
 					</div>
 				</section>
@@ -162,7 +163,7 @@
                                     Do you prefer cycling uphill or downhill in the rain? Or not at all? The paper deals with the functional statistical analysis of the usage of the bike-sharing service in Helsinki. It fully accounts for temporal, spatial and spatiotemporal interactions.
 								</p>
                                 <p>
-                                    The paper got accepted for publication in the Journal of the Royal Statistical Society Series A and will be online soon!
+                                    The paper is availabe open-access in the Journal of the Royal Statistical Society Series A <a href="https://doi.org/10.1111/rssa.12834">(DOI)</a>
                                 </p>
 							</article>
 							<article class="col-4 col-12-mobile special">
