--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
                                            In God we trust. All others must bring data. (W. E. Deming)
 										</p>
 									</header>
-									<a href="#" class="image featured"><img src="images/panorama.jpg" alt="" /></a>
+									<!-- <a href="#" class="image featured"><img src="images/panorama.jpg" alt="" /></a> -->
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
                                         <ul>
@@ -267,7 +267,7 @@
                                     <article>
                                         <a href="spARCH.html" class="image featured"><img src="images/pic01_n.jpg" alt="" /></a>
                                         <header>
-                                            <h3><a href="spARCH.html">Spatial ARCH Model</a></h3>
+                                            <h3><a href="spARCH.html">Spatial ARCH Model (SpaSta)</a></h3>
                                         </header>
                                         <p>Inspired by the time-series ARCH model developed by Robert F. Engle (1982), for which he was awarded the Nobel Prize, we have introduced a univariate spatial ARCH model in 2016 (first published arXiv paper).</p>
                                     </article>
@@ -275,23 +275,16 @@
                                     <article>
                                         <a href="RJ.html" class="image featured"><img src="images/pic02_n.jpg" alt="" /></a>
                                         <header>
-                                            <h3><a href="RJ.html">spGARCH: An R-Package for spatial GARCH Models</a></h3>
+                                            <h3><a href="RJ.html">spGARCH: An R-Package for spatial GARCH Models (RJ)</a></h3>
                                         </header>
                                         <p>Description of my R-package for simulation and estimation of spatial GARCH models, including a new logarithmic spatial ARCH process.</p>
                                     </article>
             <!--                        total number of downloads <img src="https://cranlogs.r-pkg.org/badges/grand-total/spGARCH" alt="" />-->
-                                    <article>
-                                        <a href="profiles.html" class="image featured"><img src="images/pic03_n.jpg" alt="" /></a>
-                                        <header>
-                                            <h3><a href="profiles.html">Statistical Analysis of Coastal Profiles</a></h3>
-                                        </header>
-                                        <p>Fully data-driven statistical model to understand the spatial and temporal evolution of coastal profiles (e.g. for efficient intervention designs against coastal erosion).</p>
-                                    </article>
                                     
                                     <article>
                                         <a href="bikes.html" class="image featured"><img src="images/pic05_n.jpg" alt="" /></a>
                                         <header>
-                                            <h3><a href="bikes.html">The Helsinki Bike-Sharing System</a></h3>
+                                            <h3><a href="bikes.html">The Helsinki Bike-Sharing System (JRSSA)</a></h3>
                                         </header>
                                         <p>Functional geostatistical analysis of bike-sharing usage in the capital of Finland, Helsinki.</p>
                                     </article>
@@ -299,10 +292,19 @@
                                     <article>
                                         <a href="lasso.html" class="image featured"><img src="images/pic04_n.jpg" alt="" /></a>
                                         <header>
-                                            <h3><a href="lasso.html">Estimation of the Spatial Weights Matrix</a></h3>
+                                            <h3><a href="lasso.html">Estimation of the Spatial Weights Matrix (JCGS)</a></h3>
                                         </header>
                                         <p>We propose an adaptive LASSO estimation procedure to fully recover the unknown weight matrix of spatial autoregressive panels with locally varying mean levels.</p>
                                     </article>
+                                    
+                                    <article>
+                                        <a href="profiles.html" class="image featured"><img src="images/pic03_n.jpg" alt="" /></a>
+                                        <header>
+                                            <h3><a href="profiles.html">Statistical Analysis of Coastal Profiles (CoastEng)</a></h3>
+                                        </header>
+                                        <p>Fully data-driven statistical model to understand the spatial and temporal evolution of coastal profiles (e.g. for efficient intervention designs against coastal erosion).</p>
+                                    </article>
+
 
                                 </div>
                             </section>
