--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 								<h3><a href="spARCH.html">Spatial ARCH Model (SpaSta)</a></h3>
 							</header>
 							<p>Inspired by the time-series ARCH model developed by Robert F. Engle (1982), for which he was awarded the Nobel Prize, we have introduced a univariate spatial ARCH model in 2016 (first published arXiv paper).</p>
+                            <p>Research Interest Score is higher than 91% of all articles published in 2018 (Researchgate)</p>
 						</article>
                         
                         <article>
@@ -111,6 +112,7 @@
 								<h3><a href="lasso.html">Estimation of the Spatial Weights Matrix (JCGS)</a></h3>
 							</header>
 							<p>We propose an adaptive LASSO estimation procedure to fully recover the unknown weight matrix of spatial autoregressive panels with locally varying mean levels.</p>
+                            <p>Research Interest Score is higher than 89% of all articles published in 2022 (Researchgate)</p>
 						</article>
                         
                         <article>
@@ -119,6 +121,7 @@
                                 <h3><a href="profiles.html">Statistical Analysis of Coastal Profiles (CoastEng)</a></h3>
                             </header>
                             <p>Fully data-driven statistical model to understand the spatial and temporal evolution of coastal profiles (e.g. for efficient intervention designs against coastal erosion).</p>
+                            <p>Research Interest Score is higher than 88% of all articles published in 2021 (Researchgate)</p>
                         </article>
 
 					</div>
