--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
                                         <ul>
-                                            <li> <strong>Otto, P.</strong>, Schmid, W. (2022): A general framework for spatial GARCH models. Statistical Papers<a href="https://arxiv.org/abs/2106.10477"> (accepted)</a></li>
+                                            <li> <strong>Otto, P.</strong>, Schmid, W. (2022): A general framework for spatial GARCH models. Statistical Papers<a href="https://doi.org/10.1007/s00362-022-01357-1"> (DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Steinert, R. (2022): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics<a href="https://doi.org/10.1080/10618600.2022.2107530"> (DOI)</a></li>
                                             <li> Harke, F. H., Merk, M., <strong>Otto, P.</strong> (2022): Estimation of Asymmetric Spatial Autoregressive Dependence on Irregular Lattices. Symmetry 14(7)<a href="https://doi.org/10.3390/sym14071474"> (DOI)</a></li>
                                             <li> Piter, A., <strong>Otto, P.</strong>, Alkhatib, H. (2022): The Helsinki Bike-Sharing Systems - Insights gained from a spatiotemporal functional model. Journal of the Royal Statistical Society Series A<a href="https://doi.org/10.1111/rssa.12834"> (DOI)</a></li>
