--- a/cv.html
+++ b/cv.html
@@ -74,6 +74,9 @@
                                     <p>
                                     Passionate statistician and professor of big geospatial data with an interdisciplinary research profile and several publications in outstanding scientific journals (rated as top 9% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (6 ongoing, 1 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 800,000 Euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
+                                    <p>
+                                    In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked 23rd worldwide on Scopus and 1st among German researchers.
+                                    </p>
                                 </article>
                                 <article class="col-3 col-12-mobile special">
                                     <a href="#" class="image"><img src="images/me.jpg" alt="" /></a>
