--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Curriculum Vitae</a></h1>
+								<h1><a href="index.html" id="logo">CV</a></h1>
 							</header>
 						</div>
 
@@ -72,7 +72,7 @@
                             <div class="row">
                                 <article class="col-8 col-12-mobile special">
                                     <p>
-                                    Passionate statistician and professor of big geospatial data with an interdisciplinary research profile and several publications in outstanding scientific journals (rated as top 9% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (6 ongoing, 1 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 800,000 Euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
+                                    Passionate statistician and professor of big geospatial data with an interdisciplinary research profile and several publications in outstanding scientific journals (rated as top 9% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (6 ongoing, 1 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
                                     <p>
                                     In my main research area (topic T.10087 "Maximum Likelihood Method, Panel Data Model, Spatial Econometrics"), I am currently ranked 23rd worldwide on Scopus and 1st among German researchers.
@@ -82,6 +82,7 @@
                                     <a href="#" class="image"><img src="images/me.jpg" alt="" /></a>
                                 </article>
                             </div>
+                            <p></p>
                             <h3>Scientific career</h3>
 							<p>
                                 <dl>
@@ -89,7 +90,7 @@
                                   <dd>Assistant professor of Big Geospatial Data, Institute for Cartography and Geoinformatics of the Faculty of Civil Engineering and Geodesy, Leibniz University Hannover</dd>
                                   <dd>My group currently consists of 6 PhD students: Anna Malinovskaya, Franz H. Harke, Qendrim Shaboviq, Mohammadreza Nasiriboroujeni, Ariane Nidelle Meli Chrisko, Elkanah Nyabuto</dd>
                                   <dt><b>01/04/2020 - 31/03/2021:</b></dt>
-                                  <dd>Visiting/substitute professor of Spatial Data Analysis and Statistical Learning (full professor), Faculty of Economics, University of Göttingen</dd>
+                                  <dd>Visiting/interim professor of Spatial Data Analysis and Statistical Learning (full professor), Faculty of Economics, University of Göttingen</dd>
                                   <dt><b>01/01/2017 - 31/08/2018:</b></dt>
                                   <dd>Junior research group leader "Detection and Surveillance of Spatial and Spatiotemporal Clusters", European University Viadrina, Frankfurt (Oder)</dd>
                                   <dt><b>01/12/2011 - 31/12/2016:</b></dt>
@@ -125,7 +126,7 @@
                                   <dt><b>Associate editor:</b></dt>
                                   <dd>Environmetrics, AStA Advances in Statistical Analysis, AStA Wirtschafts- und Sozialstatistisches Archiv</dd>
                                   <dt><b>Elected member:</b></dt>
-                                  <dd>Young Scientist Section of the Science Academy of Lower Saxony (Junge Braunschweigische Wissenschaftliche Gesellschaft)</dd>
+                                  <dd>Junge Braunschweigische Wissenschaftliche Gesellschaft</dd>
                                   <dt><b>Treasurer and board member:</b></dt>
                                   <dd>German Statistical Society</dd>
                                   <dt><b>Member:</b></dt>
@@ -134,15 +135,19 @@
                                   <dd>German Research Foundation, Journal of Econometrics, Environmetrics Econometrics and Statistics, Annals of Regional Science, Atmospheric Environment, Journal of Business and Economic Statistics, among others</dd>
                                 </dl>
                             </p>
-                            <h3>Research funding</h3>
+                            <h3>Research grants (selected)</h3>
                             <p>
                                 <dl>
-                                  <dt><b>2021 - 2022:</b></dt>
-                                  <dd>"AgrImOnIA: Agricultural impact on Italian air quality", joint project with the Universities of Bergamo, Mailand-Bicocca, and Turin</dd>
+                                  <dt><b>2023 - 2025:</b></dt>
+                                  <dd>"Time series analysis of historical maps", collaborative project funded by the German Federal Agency for Cartography and Geodesy (3 years)</dd>
+                                  <dt><b>2022 - 2025:</b></dt>
+                                  <dd>"Statistical estimation of high-dimensional, spatial dependence structures using machine learning methods", German Research Foundation (3 years)</dd>
+                                  <dt><b>2022 - 2023:</b></dt>
+                                  <dd>"AgrImOnIA: Agricultural impact on Italian air quality", joint project with the Universities of Bergamo, Milan-Bicocca, Turin, and Hannover  (1.5 years)</dd>
                                   <dt><b>2018 - 2022:</b></dt>
-                                  <dd>"Spatial and spatiotemporal GARCH models", German Research Foundation</dd>
+                                  <dd>"Spatial and spatiotemporal GARCH models", German Research Foundation  (3 years)</dd>
                                   <dt><b>2017 - 2018:</b></dt>
-                                  <dd>Junior research group "Detection and Surveillance of Spatial and Spatiotemporal Clusters", Viadrina Center B/ORDERS IN MOTION</dd>
+                                  <dd>Junior research group "Detection and Surveillance of Spatial and Spatiotemporal Clusters", Viadrina Center B/ORDERS IN MOTION (2 years)</dd>
                                 </dl>
                                 <footer>
                                     <a href="projects.html" class="button">More about my current projects</a>
