--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
                             <p>Fully data-driven statistical model to understand the spatial and temporal evolution of coastal profiles (e.g. for efficient intervention designs against coastal erosion).</p>
                             <p>Research Interest Score is higher than 88% of all articles published in 2021 (Researchgate)</p>
                         </article>
+                        
+                        <article>
+                            <a href="garch.html" class="image featured"><img src="images/pic10_n.jpg" alt="" /></a>
+                            <header>
+                                <h3><a href="garch.html">A general framework for spatial GARCH models (Stat Pap)</a></h3>
+                            </header>
+                            <p>Novel spatial GARCH process in a unified framework, which also covers all previously proposed spatial ARCH models.</p>
+                            <p>Research Interest Score is higher than 97% of all articles published in 2022 (Researchgate)</p>
+                        </article>
 
 					</div>
 				</section>
@@ -175,7 +184,7 @@
 									<h3><a href="projects.html">New funding - Call for applications</a></h3>
 								</header>
 								<p>
-                                    I am looking for new research assistants (PhD students) for the project "Statistical estimation of high-dimensional, spatial dependency structures using machine learning methods" (funded by DFG). The project deals with the estimation of high-dimensional spatial weight matrices for spatial autoregressive and GARCH models. An integral part of the project deals with applications in geosciences.
+                                    I am looking for new research assistants (PhD students) for the project "Time series analysis of historical maps". The project deals with statistical modelling of geo-referenced time series from historical maps, mainly generalised additive models.
 								</p>
                                 <p>
                                     If you are interested, please feel free to contact me by email (attaching your current CV and references, such as papers, theses, etc., if available).
