--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,20 @@
                                     
                                     <article class="col-4 col-12-mobile">
                                         <header>
+                                            <h3><a href="https://www.bkg.bund.de/DE/Forschung/Gauss-Zentrum/gauss-zentrum.html">Time-series analysis of historical maps</a></h3>
+                                            <p>German government funding (Federal Agency for Cartography and Geodesy)</p>
+                                        </header>
+                                        <a href="https://commons.wikimedia.org/wiki/File:An_historical_map_of_Roman_Empire_and_the_neighbouring_barbarous_nations_to_the_year_of_our_Lord_four_hundred,_when_the_empire_began_to_be_rent_with_foreign_invasions._-_..._by_Monsieur_William_Del_NYPL1630455.jpg" class="image featured"><img src="images/An_historical_map.jpg" alt="" />From The Lionel Pincus and Princess Firyal Map Division.</a>
+                                        <p>
+                                        A collaborative project in the overarching research topic "Geo meets Data Science and Fusion".
+                                        </p>
+                                        <p>
+                                        The project's main objective is the time series analysis of historical maps. To this end, a few processes will be selected as examples and examined in more detail in a dedicated work package. First, the temporal evolution of land cover or land use is analysed using classification approaches based on artificial intelligence (AI). Second, statistical modelling approaches are considered to gain insights into the development over time in different areas, e.g., urbanisation (How does the settlement area increase over time? Which factors influence urbanisation? To which extent can urbanisation be forecasted if the process will continue as before?), structural changes in agriculture (Are there patterns in the change of agricultural use, e.g. in the ratio of arable land to pasture land or land not used for agriculture?), temporal change in forest cover (How is the forested area changing? Where is forest damage likely to occur in future?), coast (How has the coastline or the structure of land use near the coast changed during the observation period? Temporal development of floodplains e.g. along river courses that have been regulated in the course of the observation period?).
+                                        </p>
+                                    </article>
+                                    
+                                    <article class="col-4 col-12-mobile">
+                                        <header>
                                             <h3><a href="https://gepris.dfg.de/gepris/person/401458421">Statistical estimation of high-dimensional, spatial dependency structures using machine learning methods</a></h3>
                                             <p>Funded by: German research foundation (DFG)</p>
                                         </header>
