--- a/teaching.html
+++ b/teaching.html
@@ -75,6 +75,17 @@
 										</p>
 									</header>
 <!--									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>-->
+                                    <section>
+                                        <header>
+                                            <h3>PhD Short Course on Regularised Estimation in Geostatistics</h3>
+                                        </header>
+                                        <p>
+                                            University of Bergamo (January 2023)
+                                        </p>
+                                        <p>
+                                        My focus is on regularised estimation procedures applicable for geostatistical and spatial autoregression models. These methods are particularly relevant in the case of big geospatial data for dimensionality reduction or model selection.
+                                        </p>
+                                    </section>
 									<section>
 										<header>
 											<h3>Big Geospatial Data</h3>
