--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png">
         <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png">
         <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-180x180.png">
-        <link rel="apple-touch-icon" sizes="192x192" href="favicon/apple-touch-icon-192x192.png">
+        <link rel="android-touch-icon" sizes="192x192" href="favicon/android-touch-icon-192x192.png">
         <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
         <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96">
         <meta name="msapplication-TileColor" content="#2b5797">
-        <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+        <meta name="msapplication-TileImage" content="/mstile-150x150.png">
         
 	</head>
 	<body class="homepage is-preload">
