--- a/teaching.html
+++ b/teaching.html
@@ -86,7 +86,7 @@
                                         My focus is on regularised estimation procedures applicable for geostatistical and spatial autoregression models. These methods are particularly relevant in the case of big geospatial data for dimensionality reduction or model selection.
                                         </p>
                                         <p>
-                                            Link to slides (preliminary): <a href="slides/short_course_Bergamo/ShortCourse.html">here</a>
+                                            Download the slides <a href="slides/short_course_Bergamo/ShortCourse.html">here</a>
                                         </p>
                                     </section>
 									<section>
