--- a/bikes.html
+++ b/bikes.html
@@ -52,6 +52,7 @@
                                 <ul>
                                     <li><a href="research.html">Publications</a></li>
                                     <li><a href="projects.html">Projects</a></li>
+                                    <li><a href="presentations.html">Presentations</a></li>
                                 </ul>
                             </li>
                             <li><a href="teaching.html">Teaching</a></li>
