--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,8 @@
 										</p>
 									</header>
                                     
+                                    In total, I received research grants amounting to 1,038,847 euros (my own share in each case).
+                                    
                                     <article class="col-4 col-12-mobile">
                                         <header>
                                             <h3><a href="https://www.bkg.bund.de/DE/Forschung/Gauss-Zentrum/gauss-zentrum.html">Time-series analysis of historical maps</a></h3>
