--- a/projects.html
+++ b/projects.html
@@ -69,14 +69,19 @@
 						<div class="row gtr-200">
 							<div class="col-8 col-12-mobile" id="content">
 								<article id="main">
+
 									<header>
 										<h2><a href="#">Projects</a></h2>
+                                    </header>
+                                        <p>
+                                        In total, I received research grants amounting to 1,038,847 euros (my own share in each case).
+                                        </p>
+                                    <header>
 										<p>
                                            Summary of some current projects
 										</p>
 									</header>
                                     
-                                    In total, I received research grants amounting to 1,038,847 euros (my own share in each case).
                                     
                                     <article class="col-4 col-12-mobile">
                                         <header>
