--- a/research.html
+++ b/research.html
@@ -90,7 +90,7 @@
                                     <h3>Peer-reviewed journals</h3>
                                     <p>
                                         <ul>
-                                            <li> Fassò, A., Rodeschini, J., Fusta Moro, A., Shaboviq, Q., Maranzano, P., Cameletti, M., Finazzi, F., Golini, N., Ignaccolo, R., <strong>Otto, P.</strong> (2023): Agrimonia: a dataset on livestock, meteorology and air quality in the Lombardy region, Italy. accepted: Scientific Data - Nature</li>
+                                            <li> Fassò, A., Rodeschini, J., Fusta Moro, A., Shaboviq, Q., Maranzano, P., Cameletti, M., Finazzi, F., Golini, N., Ignaccolo, R., <strong>Otto, P.</strong> (2023): Agrimonia: a dataset on livestock, meteorology and air quality in the Lombardy region, Italy. accepted: nature Scientific Data</li>
                                             <li> Harke, F. H., <strong>Otto, P.</strong> (2023): Solar Self-Sufficient Households as a Driving Factor for Sustainability Transformation. Sustainability 15(3)<a href="https://doi.org/10.3390/su15032734"> (DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Schmid, W. (2022): A general framework for spatial GARCH models. Statistical Papers<a href="https://doi.org/10.1007/s00362-022-01357-1"> (DOI)</a></li>
                                             <li> <strong>Otto, P.</strong>, Steinert, R. (2022): Estimation of the Spatial Weighting Matrix for Spatiotemporal Data under the Presence of Structural Breaks. Journal of Computational and Graphical Statistics<a href="https://doi.org/10.1080/10618600.2022.2107530"> (DOI)</a></li>
